# PropertyRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  propertyrag-prompt.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/propertyrag/: __init__.py  __main__.py
src/propertyrag/api/: app.py  dependencies.py  schemas.py
src/propertyrag/api/routes/: documents.py  projects.py  query.py
src/propertyrag/core/: config.py  logging.py  models.py
src/propertyrag/db/: models.py  repository.py  session.py
src/propertyrag/services/: chunker.py  classifier.py  embedder.py  extraction_prompts.py  extractor.py  ingestion.py  pdf_parser.py  rag.py  retriever.py
tests/: __init__.py  conftest.py  test_api.py  test_chunker.py  test_embedder.py  test_extractor.py
